tests/NormalTests/paczka1/fuzzy1/73552628.err
Error in line 6: S95 A944 25,14
Error in line 10: S95 S95 RR,5
Error in line 11: xImwU A944 49,3
Error in line 19: 2Qw A944 47,33
Error in line 12: S95 S95 166,9
Error in line 16: 2Qw S184 8,6
Error in line 29: U2z A944 33,2
Error in line 32: U2z A347 90,4
